[package]
name = "close-process-rs"
version = "0.1.0"
authors = ["kernel-panik"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["psapi", "processthreadsapi", "winnt", "handleapi"] }